@@ -8,6 +8,8 @@ CVS HEAD (2006-11-16):
 * Fixed wrong length computations when writing to a file in UTF-8 or other
   multibyte charsets. (This broke debugging information for projects in a path
   containing non-ASCII characters.)
+* Added tas to the default Integer Arithmetic instructions.
+* Added xdef, globl, altmacro and noaltmacro to the default GNU as directives.
 
 
 KTIGCC 1.05 (2006-10-24):
